fix:reference center align

--- a/place/static/css/place_detail.css
+++ b/place/static/css/place_detail.css
@@ -76,7 +76,9 @@ main{
     font-size:0.6rem;
     margin-top:8px;
 }
-.like{
+.like,
+.save,
+.comment-count{
     display:flex;
     flex-direction: column;
     align-items: center;
@@ -86,12 +88,7 @@ main{
 .save i{
     cursor: pointer;
 }
-.save{
-    display:flex;
-    flex-direction: column;
-    align-items: center;
-    padding: 0 1rem;
-}
+
 .place-tag{
     margin:1rem 0;
     display: flex;
