--- a/reference/static/css/reference_list.css
+++ b/reference/static/css/reference_list.css
@@ -66,24 +66,6 @@ body{
 
 
 /* ======reference list======*/
-.grid-container{
-    position: absolute;
-    left:2.15%;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-}
-.grid{
-    position: none;
-    display: flex;
-    /* width:80vw;
-    grid-template-columns: repeat(4,1fr);
-    grid-auto-rows:auto; */
-    justify-items: center;
-    align-items: center;
-    /* grid-auto-flow: row; */
-}
 .category-btn{
     width:113px;
     padding:1rem;
@@ -100,9 +82,14 @@ hr{
     width:100%;
     grid-column:span 4;
 }
-.grid-item{
-    width:calc(100%/4.3);
-    position:none;
+.reference-list{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    flex-wrap: wrap;
+}
+.reference-item{
+    width:calc(100%/4.1);
     margin-bottom:1.7rem;
 }
 .item-info{
@@ -219,12 +206,12 @@ hr{
     .grid-container{
         position: static;
     }
-    .grid{
+    .reference-list{
         display:flex;
         flex-direction: column;
         width:100%;
     }
-    .grid-item{
+    .reference-item{
         width:100%;
         position:none;
         margin-bottom:1.7rem;
